# enveloppe_convexe

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  Point.cpp  Point.h  Polygon.cpp  Polygon.h  README.md  Sommet.cpp  Sommet.h  main.cpp
